use library dir for installation of archives and SO libraries

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -104,7 +104,6 @@ set(GIFTI_INSTALL_EXPORT_NAME ${PACKAGE_NAME}Targets)
 set_if_not_defined(GIFTI_INSTALL_RUNTIME_DIR ${CMAKE_INSTALL_PREFIX}/bin)
 set_if_not_defined(GIFTI_INSTALL_LIBRARY_DIR ${CMAKE_INSTALL_PREFIX}/lib/${PACKAGE_NAME})
 set_if_not_defined(GIFTI_INSTALL_INCLUDE_DIR ${CMAKE_INSTALL_PREFIX}/include/${PACKAGE_NAME})
-set_if_not_defined(GIFTI_INSTALL_ARCHIVE_DIR ${CMAKE_INSTALL_PREFIX}/lib/${PACKAGE_NAME})
 
 # Other settings
 option(BUILD_SHARED_LIBS "Toggle building shared libraries." ON)
@@ -151,6 +150,11 @@ set(GIFTI_LIBRARY_PROPERTIES VERSION ${GIFTI_SHAREDLIB_VERSION} SOVERSION ${GIFT
 
 
 add_library(giftiio gifti_io.c gifti_xml.c)
+target_include_directories(giftiio PUBLIC
+  $<INSTALL_INTERFACE:${GIFTI_INSTALL_LIBRARY_DIR}>    
+  $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}>
+)
+
 set_target_properties(giftiio PROPERTIES
  ${GIFTI_LIBRARY_PROPERTIES}
  PUBLIC_HEADER "gifti_io.h;gifti_xml.h")
@@ -174,7 +178,7 @@ install(TARGETS giftiio gifti_tool gifti_test
     RUNTIME DESTINATION ${GIFTI_INSTALL_RUNTIME_DIR} COMPONENT Runtime
     LIBRARY DESTINATION ${GIFTI_INSTALL_LIBRARY_DIR} COMPONENT Libraries
     PUBLIC_HEADER DESTINATION ${GIFTI_INSTALL_LIBRARY_DIR} COMPONENT Development
-    ARCHIVE DESTINATION ${GIFTI_INSTALL_ARCHIVE_DIR} COMPONENT Libraries)
+    ARCHIVE DESTINATION ${GIFTI_INSTALL_LIBRARY_DIR} COMPONENT Libraries)
 
 
 # For package this project:
