test_remote fetch

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -130,8 +130,10 @@ if (NOT "${${NIFTI_PACKAGE_PREFIX}NIFTI_FOUND}")
   # If new or changed data is needed, add that data to the https://github.com/NIFTI-Imaging/nifti-test-data repo
   # make a new release, and then update the URL and hash (shasum -a 256 <downloaded tarball>).
   FetchContent_Declare( fetch_nifti_clib_git_repo
-          GIT_REPOSITORY https://github.com/NIFTI-Imaging/nifti_clib
-          GIT_TAG        v3.0.0 # or git <HASH> or git <branch>
+          GIT_REPOSITORY https://github.com/leej3/nifti_clib
+          # GIT_REPOSITORY /afni/nifti_clib
+          GIT_TAG        v3.4.4 # or git <HASH> or git <branch>
+          # GIT_TAG        update_installation # or git <HASH> or git <branch>
           )
   FetchContent_GetProperties(fetch_nifti_clib_git_repo)
   if(NOT fetch_nifti_clib_git_repo_POPULATED)
