--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,7 +90,7 @@ else()
   # make a new release, and then update the URL and hash (shasum -a 256 <downloaded tarball>).
   FetchContent_Declare( fetch_nifti_clib_git_repo
           GIT_REPOSITORY https://github.com/NIFTI-Imaging/nifti_clib.git
-          GIT_TAG        v3.0.0 # or <HASH>
+          GIT_TAG        v3.0.0beta1 # or <HASH>
           )
   FetchContent_GetProperties(fetch_nifti_clib_git_repo)
 
