add fix for when NIFTI2 format is not being used

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,6 +105,9 @@ string( REGEX MATCH "^[0-9]+" GIFTI_SHAREDLIB_SOVERSION ${GIFTI_SHAREDLIB_VERSIO
 set(GIFTI_LIBRARY_PROPERTIES VERSION ${GIFTI_SHAREDLIB_VERSION} SOVERSION ${GIFTI_SHAREDLIB_SOVERSION})
 
 set(GIFTICLIB_NAME ${NIFTI_PACKAGE_PREFIX}giftiio)
+if(NOT USE_NIFTI2_CODE)
+set_source_files_properties(gifti_io.h USE_NIFTI_VERSION_1)
+endif()
 add_library(${GIFTICLIB_NAME} gifti_io.c gifti_xml.c)
 set_target_properties(${GIFTICLIB_NAME} PROPERTIES
  ${GIFTI_LIBRARY_PROPERTIES}
