fixup for driving gifti build from itk

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -105,18 +105,19 @@ string( REGEX MATCH "^[0-9]+" GIFTI_SHAREDLIB_SOVERSION ${GIFTI_SHAREDLIB_VERSIO
 set(GIFTI_LIBRARY_PROPERTIES VERSION ${GIFTI_SHAREDLIB_VERSION} SOVERSION ${GIFTI_SHAREDLIB_SOVERSION})
 
 set(GIFTICLIB_NAME ${NIFTI_PACKAGE_PREFIX}giftiio)
-if(NOT USE_NIFTI2_CODE)
-set_source_files_properties(gifti_io.h USE_NIFTI_VERSION_1)
-endif()
+
 add_library(${GIFTICLIB_NAME} gifti_io.c gifti_xml.c)
 set_target_properties(${GIFTICLIB_NAME} PROPERTIES
  ${GIFTI_LIBRARY_PROPERTIES}
  PUBLIC_HEADER "gifti_io.h;gifti_xml.h")
+target_compile_definitions(${GIFTICLIB_NAME} PUBLIC $<$<NOT:$<BOOL:${USE_NIFTI2_CODE}>>:"USE_NIFTI_VERSION_1">)
 target_link_libraries(
   ${GIFTICLIB_NAME} 
-    PUBLIC 
-      $<TARGET_NAME_IF_EXISTS:NIFTI::nifti2>
-      $<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}nifti2>
+    PUBLIC
+      $<$<NOT:$<BOOL:${USE_NIFTI2_CODE}>>:$<TARGET_NAME_IF_EXISTS:NIFTI::niftiio>> 
+      $<$<NOT:$<BOOL:${USE_NIFTI2_CODE}>>:$<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}niftiio>> 
+      $<$<BOOL:${USE_NIFTI2_CODE}>:$<TARGET_NAME_IF_EXISTS:NIFTI::nifti2>>
+      $<$<BOOL:${USE_NIFTI2_CODE}>:$<TARGET_NAME_IF_EXISTS:$<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}nifti2>>>
       ${EXPAT_LIBRARIES} 
       ${ZLIB_LIBRARIES}
       )
