make fix for itk driving the build

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,8 +63,8 @@ add_definitions(-DHAVE_ZLIB)
 
 # Finding dependencies
 find_package(ITK QUIET)
-if(ITK_FOUND)
-# ITK provides expat and zlib.
+if(ITK_FOUND OR ITKEXPAT)
+  # ITK is found or driving the build and  provides expat and zlib.
    include(${ITK_USE_FILE})
    set(EXPAT_LIBRARIES ITKEXPAT)
    set(ZLIB_LIBRARIES ITKznz)
