fixup nifti2 generator expression was broken

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -141,7 +141,7 @@ target_link_libraries(
       $<$<NOT:$<BOOL:${USE_NIFTI2_CODE}>>:$<TARGET_NAME_IF_EXISTS:NIFTI::niftiio>> 
       $<$<NOT:$<BOOL:${USE_NIFTI2_CODE}>>:$<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}niftiio>> 
       $<$<BOOL:${USE_NIFTI2_CODE}>:$<TARGET_NAME_IF_EXISTS:NIFTI::nifti2>>
-      $<$<BOOL:${USE_NIFTI2_CODE}>:$<TARGET_NAME_IF_EXISTS:$<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}nifti2>>>
+      $<$<BOOL:${USE_NIFTI2_CODE}>:$<TARGET_NAME_IF_EXISTS:${NIFTI_PACKAGE_PREFIX}nifti2>>
       ${EXPAT_LIBRARIES} 
       ${ZLIB_LIBRARIES}
       )
