--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,13 +17,20 @@ jobs:
             wget \
             cmake \
             make \
-            gcc 
+            gcc
       - checkout
       - run:
           name: Build and test gifti
           command: |
             mkdir ../build
             cd ../build
+            export CMAKE_VER=3.11.4
+            wget -P /opt/cmake  https://github.com/Kitware/CMake/releases/download/v${CMAKE_VER}/cmake-${CMAKE_VER}-Linux-x86_64.tar.gz
+            cd /opt/cmake
+            tar xzvf cmake-${CMAKE_VER}-Linux-x86_64.tar.gz
+            export PATH="/opt/cmake/cmake-${CMAKE_VER}-Linux-x86_64/bin:$PATH"
+            cd -
+            d=../build_with_old_cmake;mkdir $d;cd $d
             cmake ../gifti_clib
             make
             ctest --output-on-failure
